# osint-platform

./: .env.example  README.md  docker-compose.prod.yml  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_auth_tables.py  003_targets_and_jobs.py  004_jobs_evidence_findings.py
api/app/: __init__.py  main.py
api/app/core/: audit.py  audit_middleware.py  celery_client.py  config.py  deps.py  logging.py  metrics.py  rate_limit.py  redis.py  security.py  security_v1.py  storage.py  validators.py
api/app/db/: base.py  session.py
api/app/models/: __init__.py  audit_log.py  finding.py  investigation.py  job.py  raw_evidence.py  target.py  user.py  workspace.py
api/app/routers/: auth.py  evidence.py  findings.py  health.py  investigations.py  jobs.py  targets.py  workspaces.py
api/tests/: conftest.py  test_allowlist.py  test_auth.py  test_rate_limit.py  test_rbac.py  test_security.py
infra/grafana/dashboards/: osint-v1.json  platform.json
infra/grafana/provisioning/dashboards/: dashboard.yml
infra/minio/: init.sh
infra/prometheus/: prometheus.yml
shared/: pyproject.toml
shared/shared/: __init__.py  enums.py  ids.py
worker/: Dockerfile  pyproject.toml  pytest.ini
worker/tests/: __init__.py  conftest.py  test_email_providers.py  test_email_validation.py  test_integration.py  test_parsing.py  test_username_providers.py  test_v1_security.py
worker/worker_app/: __init__.py  celery_app.py  email_providers.py  rdap_providers.py  security.py  tasks.py  username_providers.py
(+1 files in other folders)
